# Adv-ML-First-Module

./: Dockerfile  README.md  docker-compose.yml  main.py  model.py  predictions.csv  pyproject.toml  random_forest_model.joblib
adv_ml_first_module/: main.py  model.py
adv_ml_first_module/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
adv_ml_first_module/catboost_info/learn/: events.out.tfevents
adv_ml_first_module/data/: sample_submission.csv
adv_ml_first_module/data/results/: result_cat.csv  result_forest.csv
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
model/: random_forest_model.joblib
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
wheelhouse/: fire-0.6.0-py2.py3-none-any.whl  random11-0.0.1-py3-none-any.whl
