[tool.poetry]
name = "adv-ml-first-module"
version = "0.1.0"
description = "My project to first module adv ML from HITS"
authors = ["AlocasMiller <129418751+AlocasMiller@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
random11 = "^0.0.1"
catboost = "^1.2.3"
joblib = "^1.3.2"
fire = "^0.6.0"
scikit-learn = {extras = ["alldeps"], version = "^1.4.1.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
